deploy: d91d431b94a7230361fb6731cb672317269e0026

--- a/00-main.css
+++ b/00-main.css
@@ -1,5 +1,6 @@
  
 /* start css.sty */
+.cmr-10x-x-109{}
 .rm-lmbx-10x-x-109{ font-weight: bold;}
 .rm-lmbx-8{font-size:72%; font-weight: bold;}
 .lmmib-10x-x-109{font_weight:bold;}
