--- a/index.css
+++ b/index.css
@@ -11,7 +11,9 @@
 .lmmib-10x-x-109{font_weight:bold;}
 .lmmib-10x-x-109{font_weight:bold;}
 .lmmib-10x-x-109{font_weight:bold;}
+.lmmib-10x-x-109{font_weight:bold;}
 .lmmib-10x-x-80{font-size:72%;font_weight:bold;}
+.lmmib-10x-x-80{font_weight:bold;}
 .lmmib-10x-x-80{font_weight:bold;}
 .lmmib-10x-x-80{font_weight:bold;}
 .lmmib-10x-x-80{font_weight:bold;}
@@ -51,17 +53,34 @@
 .rm-lmr-12{font-size:109%;}
 .rm-lmss-10x-x-109{ font-family: sans-serif;}
 .rm-lmtt-10x-x-109{ font-family: monospace,monospace;}
+.rm-lmtt-10x-x-109{ font-family: monospace,monospace;}
 .ts1-lmr10-x-x-109{}
 .rm-lmri-10x-x-109{ font-style:italic;}
 .rm-lmbxi-10x-x-109{ font-style:italic; font-weight: bold;}
 .rm-lmssbx-10x-x-109{ font-family: sans-serif; font-weight: bold;}
-.rm-lmri-8{font-size:72%; font-style:italic;}
-.rm-lmr-10{font-size:90%;}
 .rm-lmr-9{font-size:81%;}
 .rm-lmr-5{font-size:45%;}
 .lmmi-9{font-size:81%;}
 .lmmi-5{font-size:45%;}
+.lmsy9-{font-size:81%;}
 .lmsy5-{font-size:45%;}
+.msbm-10x-x-90{font-size:81%;}
+.rm-lmtt-9{font-size:81%; font-family: monospace,monospace;}
+.rm-lmtt-9{ font-family: monospace,monospace;}
+.rm-lmbx-9{font-size:81%; font-weight: bold;}
+.rm-lmss-9{font-size:81%; font-family: sans-serif;}
+.rm-lmri-8{font-size:72%; font-style:italic;}
+.rm-lmr-10{font-size:90%;}
+.lmmib-10x-x-90{font-size:81%;font_weight:bold;}
+.lmmib-10x-x-90{font_weight:bold;}
+.lmmib-10x-x-90{font_weight:bold;}
+.lmmib-10x-x-90{font_weight:bold;}
+.lmmib-10x-x-90{font_weight:bold;}
+.lmmib-10x-x-90{font_weight:bold;}
+.lmmib-10x-x-90{font_weight:bold;}
+.lmmib-10x-x-90{font_weight:bold;}
+.lmmib-10x-x-90{font_weight:bold;}
+.lmmib-10x-x-90{font_weight:bold;}
 .rm-lmr-7{font-size:63%;}
 .lmmi-10{font-size:90%;}
 .lmmi-7{font-size:63%;}
