deploy: a3cc77e738bee26ca61449e9fe9563c2dc0039ff

--- a/index.css
+++ b/index.css
@@ -2,6 +2,8 @@
 /* start css.sty */
 .rm-lmbx-10x-x-109{ font-weight: bold;}
 .rm-lmbx-8{font-size:72%; font-weight: bold;}
+.rm-lmbx-6{font-size:54%; font-weight: bold;}
+.lmmib-10x-x-109{font_weight:bold;}
 .lmmib-10x-x-109{font_weight:bold;}
 .lmmib-10x-x-109{font_weight:bold;}
 .lmmib-10x-x-109{font_weight:bold;}
@@ -22,6 +24,18 @@
 .lmmib-10x-x-80{font_weight:bold;}
 .lmmib-10x-x-80{font_weight:bold;}
 .lmmib-10x-x-80{font_weight:bold;}
+.lmmib-10x-x-80{font_weight:bold;}
+.lmmib-7x-x-85{font-size:54%;font_weight:bold;}
+.lmmib-7x-x-85{font_weight:bold;}
+.lmmib-7x-x-85{font_weight:bold;}
+.lmmib-7x-x-85{font_weight:bold;}
+.lmmib-7x-x-85{font_weight:bold;}
+.lmmib-7x-x-85{font_weight:bold;}
+.lmmib-7x-x-85{font_weight:bold;}
+.lmmib-7x-x-85{font_weight:bold;}
+.lmmib-7x-x-85{font_weight:bold;}
+.lmmib-7x-x-85{font_weight:bold;}
+.lmmib-7x-x-85{font_weight:bold;}
 .lmbsy-10x-x-109{font-weight:bold;}
 .lmbsy-10x-x-109{font-weight:bold;}
 .lmbsy-10x-x-109{font-weight:bold;}
@@ -72,6 +86,7 @@
 .rm-lmri-8{font-size:72%; font-style:italic;}
 .rm-lmr-10{font-size:90%;}
 .lmmib-10x-x-90{font-size:81%;font_weight:bold;}
+.lmmib-10x-x-90{font_weight:bold;}
 .lmmib-10x-x-90{font_weight:bold;}
 .lmmib-10x-x-90{font_weight:bold;}
 .lmmib-10x-x-90{font_weight:bold;}
