--- a/index.css
+++ b/index.css
@@ -132,6 +132,8 @@ li p:first-child{ margin-top:0em; }
 li p:last-child, li div:last-child { margin-bottom:0.5em; }
 li p:first-child{ margin-bottom:0; }
 li p~ul:last-child, li p~ol:last-child{ margin-bottom:0.5em; }
+ul.itemize1,ol.enumerate1{padding-left: 0;}
+ul li.itemize,ol li.enumerate{margin-left: 1rem;}
 .enumerate1 {list-style-type:decimal;}
 .enumerate2 {list-style-type:lower-alpha;}
 .enumerate3 {list-style-type:lower-roman;}
@@ -265,10 +267,13 @@ table[rules] {border-left:solid black 0.4pt; border-right:solid black 0.4pt; }
 .hline hr, .cline hr{border:none;border-top:1px solid black;}
 .hline {border-top: 1px solid black;}
 .hline + .vspace:last-child{display:none;}
+.hline:first-child{border-bottom:1px solid black;border-top:none;}
 div.algorithm table.caption { border-bottom: 1px solid black; margin-bottom:1pt; }
 div.algorithmic span.algorithmic{white-space:pre}
 div.subfigure {text-align:center;display:inline-block; max-width:45%; margin-right: 2rem;}
-dl.enumerate-enumitem{display:grid; grid-template-columns: 3ch 1fr; align-items: top; row-gap:1ch;}
+dl.enumerate-enumitem{display:grid; grid-template-columns: min-content 1fr; align-items: top; row-gap:0ch;}
+dt.enumerate-enumitem{text-align: right;}
+dd.enumerate-enumitem{margin-left:1ch;}
 .alltt P { margin-bottom : 0em; margin-top : 0em; }
 .alltt { margin-bottom : 1em; margin-top : 1em; font-family:monospace,monospace; }
 span.textso{letter-spacing: 0.3em; word-spacing: 0.3em}
