deploy: 4cfd6ea5d6075dba51e2b5532744199dad323f38

--- a/index.css
+++ b/index.css
@@ -522,12 +522,23 @@ hr { border: none; height: 1px; background-color: #000000; }
 #tcolobox-72 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
 #tcolobox-72 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
 #tcolobox-72 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#textcolor57{color:#0000FF}
 #tcolobox-73 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
 #tcolobox-73 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
 #tcolobox-73 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#textcolor59{color:#0000FF}
+#textcolor60{color:#0000FF}
+#textcolor61{color:#0000FF}
+#textcolor62{color:#0000FF}
+#textcolor65{color:#0000FF}
+#textcolor66{color:#0000FF}
 #tcolobox-74 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
 #tcolobox-74 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
 #tcolobox-74 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#textcolor68{color:#0000FF}
+#textcolor69{color:#0000FF}
+#textcolor70{color:#0000FF}
+#textcolor71{color:#0000FF}
 #tcolobox-75 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
 #tcolobox-75 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
 #tcolobox-75 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
@@ -543,6 +554,7 @@ hr { border: none; height: 1px; background-color: #000000; }
 #tcolobox-79 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
 #tcolobox-79 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
 #tcolobox-79 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#textcolor90{color:#0000FF}
 #tcolobox-80 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
 #tcolobox-80 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
 #tcolobox-80 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
@@ -558,12 +570,14 @@ hr { border: none; height: 1px; background-color: #000000; }
 #tcolobox-84 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
 #tcolobox-84 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
 #tcolobox-84 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#textcolor107{color:#0000FF}
 #tcolobox-85 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
 #tcolobox-85 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
 #tcolobox-85 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
 #tcolobox-86 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
 #tcolobox-86 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
 #tcolobox-86 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#textcolor119{color:#0000FF}
 #tcolobox-87 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
 #tcolobox-87 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
 #tcolobox-87 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
@@ -606,6 +620,7 @@ hr { border: none; height: 1px; background-color: #000000; }
 #tcolobox-100 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
 #tcolobox-100 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
 #tcolobox-100 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#textcolor187{color:#0000FF}
 #tcolobox-101 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
 #tcolobox-101 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
 #tcolobox-101 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
@@ -651,6 +666,7 @@ hr { border: none; height: 1px; background-color: #000000; }
 #tcolobox-115 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
 #tcolobox-115 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
 #tcolobox-115 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#textcolor232{color:#0000FF}
 #tcolobox-116 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
 #tcolobox-116 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
 #tcolobox-116 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
