--- a/index.css
+++ b/index.css
@@ -103,6 +103,7 @@
 .lmmi-7{font-size:63%;}
 .lmsy-10{font-size:90%;}
 .lmsy7-{font-size:63%;}
+.msam-10{font-size:90%;}
 .msbm-10{font-size:90%;}
 p{margin-top:0;margin-bottom:0}
 p.indent{text-indent:0;}
