deploy: d131242f2761f3a647ba47ca6c80ed55103e59f8

--- a/index.css
+++ b/index.css
@@ -52,7 +52,8 @@
 .msbm-10x-x-109{}
 .msbm-10x-x-80{font-size:72%;}
 .msbm-7x-x-85{font-size:54%;}
-.vect10-x-x-109{}
+.vect10-x-x-109{ font-family: 'TeXvect10', serif;}
+.vect-8{font-size:72%;}
 .rm-lmr-10x-x-109{}
 .rm-lmr-8{font-size:72%;}
 .rm-lmr-6{font-size:54%;}
